--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 *{
     margin: 0;
+    padding: 0;
     font-family: Arial;
     border: border-box;  
+}
+
+body{
+    overflow-x:hidden;
 }
 
 .navbar {
@@ -158,13 +163,49 @@ span {
 
 /**hero section **/
 
-.hero-section{
+/*.hero-section{
     background-image: url("hero image.jpg");
     height: 350px;
     width: 1513px;
     background-size: cover;
     display: flex;
     align-items: flex-end;
+}*/
+.hero-section {
+    background-image: url("hero-image.jpg");
+    width: 100vw;
+    height: 100vh;
+    max-height:500px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: flex-end;
+   /* position: relative;
+    overflow: hidden;*/
+}
+
+.container{
+    /*max-width: 1200px;
+    margin: 0 auto;*/
+    width: 100%;
+    padding: 20px;
+}
+
+@media screen and (max-width: 768px) {
+    .hero-section {
+        height: 300px;
+    }
+}
+@media screen and (max-width: 1024px) {
+    .hero-section {
+        height: 400px;
+    }
+}
+@media screen and (max-width: 480px) {
+    .hero-section {
+        height: 200px;
+    }
 }
 .hero-message{
     background-color: white;
