--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Arial;
+    font-family: Arial, sans-serif;
     border: border-box;  
 }
 
@@ -15,20 +15,40 @@ body{
     color: white;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-evenly;  
     padding: 10px;
-    
+    flex-wrap: wrap;
+    padding: 10px;
 }
 
+@media (max-width: 768px) {
+    .navbar{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-search{
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .panel{
+        flex-direction: column;
+        text-align: center;
+    }
+}
+    
 .nav-logo{
     height: 50px;
     width: 100px;
 }
 
+
+
 .logo{
     background-image: url("amazon_logo.png");
     background-size: cover;
-    height: 50px;
+    height: 50px;     
     width: 100%;
 }
 
@@ -40,6 +60,9 @@ body{
 .border1:hover {
     border: 2px solid white;
 }
+
+
+
 
 /**box-2**/
 
@@ -97,11 +120,6 @@ body{
     color:#0f1111
 }
 
-/*.nav-search:hover{
-    border: 2px solid orange;
-
-}*/
-
 /**box-4**/
 
 span {
@@ -155,6 +173,7 @@ span {
 .panel-options{
     width: 70%;
     font-size: 0.85rem;
+    flex-wrap: wrap;
 }
 .panel-deals{
     font-size: 0.9rem;
@@ -163,66 +182,50 @@ span {
 
 /**hero section **/
 
-/*.hero-section{
-    background-image: url("hero image.jpg");
-    height: 350px;
-    width: 1513px;
+.hero-section{
+    background-image: url("hero-image.jpg");
+    height: 300px;
+    width: 100%;
     background-size: cover;
     display: flex;
     align-items: flex-end;
-}*/
-.hero-section {
+}
+/*.hero-section {
     background-image: url("hero-image.jpg");
-    width: 100vw;
-    height: 100vh;
-    max-height:500px;
+    width: 100%;
+    height:400px;
     background-size: cover;
-    background-position: center;
+    background-position: top center;
     background-repeat: no-repeat;
     display: flex;
     align-items: flex-end;
-   /* position: relative;
-    overflow: hidden;*/
-}
+    margin-bottom: 0;
+}*/
 
 .container{
-    /*max-width: 1200px;
-    margin: 0 auto;*/
+
     width: 100%;
-    padding: 20px;
+    padding: 0;
 }
 
-@media screen and (max-width: 768px) {
-    .hero-section {
-        height: 300px;
-    }
-}
-@media screen and (max-width: 1024px) {
-    .hero-section {
-        height: 400px;
-    }
-}
-@media screen and (max-width: 480px) {
-    .hero-section {
-        height: 200px;
-    }
-}
 .hero-message{
     background-color: white;
     color: black;
-    height: 40px;
+    height: 50px;
     display:flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     font-size: 0.85rem;
     width: 100%;
-    margin-bottom: 25px;
+    margin-bottom: 0;
+    padding: 0 20px;
+    margin-top: 0;
 }
 
 .hero-message a{
-    color: #007185;
-     
+    color: #007185; 
+    margin-left: 5px;
 }
 
 /**shop section**/
